2012-01-31  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7437 modifications to Bus Pirate module
	patch #7686 Updating buspirate ascii mode to current firmware, use AUX
	            as clock generator, and setting of serial receive timeout
	* buspirate.c: added paged_write, changed binary mode setup/detection,
	  added clock output on AUX pin
	* avrdude.1: updated documentation
	* doc/avrdude.texi: updated documentation

2012-01-31  Rene Liebscher <R.Liebscher@gmx.de>

	Parser does not need to know all programmer types now, new programmers
	will update only the table in pgm_type.c.
	* config_gram.y, lexer.l: removed programmer type keywords,
	use now locate_programmer_type() function
	* pgm_type.[ch]: added new files for table of programmer types
	* main.c: allow list of programmer types by -c ?type
	* avrdude.conf.in: changed all type keywords to quoted strings
	* doc/avrdude.texi: changed description of type definition, list
	of valid types is now included from generated file
	* doc/Makefile.am: generate list of programmer types for doc
	* all programmers [hc]: add xxx_desc string for description of programmer

2012-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: fixed detection of yylex_destroy availability
	by checking the version number of flex; bump required autoconf
	version to 2.60 (for AC_PROG_SED)

2012-01-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* lexer.l: Replace the old, now-defunct #define YY_NO_UNPUT by
	the new %option nounput.  This gets rid of a compiler warning.

2012-01-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add a connection_type attribute to each programmer, rather than
	trying to hard-code the default port name in main.c.
	* pgm.h: Add conntype to struct pgm.
	* lexer.l: Extend grammar for connection_type.
	* config_gram.y: (Dito.)
	* config.h: Add DEFAULT_USB, for symmetry with default_parallel
	and default_serial.
	* main.c: Replace old default portname hack by avrdude.conf-based
	knowledge.